fix safari print cancel/save squish while switching to last layout, or if toggle only one checkbox

--- a/css/style.css
+++ b/css/style.css
@@ -1255,6 +1255,10 @@ input[type='text'][disabled], input[type='password'][disabled], input[type='tel'
 	overflow-y: auto;
 }
 
+.editor_print_body {
+	min-width: 850px;
+}
+
 .editor_export_checkboxes {
 	flex-wrap: wrap;
 	max-width: 750px;
